baseGUI for SBC - TestGUIPizzeria in tuwien.sbctu.gui